tests/codegen/fail/input_object/struct/derive_incompatible_field_type.rs
use juniper::{GraphQLInputObject, GraphQLObject};

#[derive(GraphQLObject)]
struct ObjectA {
    test: String,
}

#[derive(GraphQLInputObject)]
struct Object {
    field: ObjectA,
}

fn main() {}
