tests/codegen/fail/input_object/struct/derive_incompatible_field_type.stderr
error[E0277]: the trait bound `ObjectA: IsInputType<__S>` is not satisfied
  --> fail/input_object/struct/derive_incompatible_field_type.rs:10:12
   |
10 |     field: ObjectA,
   |            ^^^^^^^ unsatisfied trait bound
   |
help: the trait `IsInputType<__S>` is not implemented for `ObjectA`
  --> fail/input_object/struct/derive_incompatible_field_type.rs:4:1
   |
 4 | struct ObjectA {
   | ^^^^^^^^^^^^^^
   = help: the following other types implement trait `IsInputType<S>`:
             ArcStr
             ID
             Object
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
           and $N others

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
  --> fail/input_object/struct/derive_incompatible_field_type.rs:10:12
   |
 8 | #[derive(GraphQLInputObject)]
   |          ------------------ required by a bound introduced by this call
 9 | struct Object {
10 |     field: ObjectA,
   |            ^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromInputValue<__S>` is not implemented for `ObjectA`
  --> fail/input_object/struct/derive_incompatible_field_type.rs:4:1
   |
 4 | struct ObjectA {
   | ^^^^^^^^^^^^^^
   = help: the following other types implement trait `FromInputValue<S>`:
             ArcStr
             ID
             Object
             bool
             compact_str::CompactString
             f64
             i32
             juniper::TypeKind
           and $N others
note: required by a bound in `Registry::<S>::arg`
  --> $WORKSPACE/juniper/src/executor/mod.rs
   |
   |     pub fn arg<T>(&mut self, name: impl Into<ArcStr>, info: &T::TypeInfo) -> Argument<S>
   |            --- required by a bound in this associated function
   |     where
   |         T: GraphQLType<S> + FromInputValue<S>,
   |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<S>::arg`

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
 --> fail/input_object/struct/derive_incompatible_field_type.rs:8:10
  |
8 | #[derive(GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromInputValue<__S>` is not implemented for `ObjectA`
 --> fail/input_object/struct/derive_incompatible_field_type.rs:4:1
  |
4 | struct ObjectA {
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromInputValue<S>`:
            ArcStr
            ID
            Object
            bool
            compact_str::CompactString
            f64
            i32
            juniper::TypeKind
          and $N others
  = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjectA: ToInputValue<_>` is not satisfied
 --> fail/input_object/struct/derive_incompatible_field_type.rs:8:10
  |
8 | #[derive(GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ToInputValue<_>` is not implemented for `ObjectA`
 --> fail/input_object/struct/derive_incompatible_field_type.rs:4:1
  |
4 | struct ObjectA {
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `ToInputValue<S>`:
            `&T` implements `ToInputValue<S>`
            `Arc<T>` implements `ToInputValue<S>`
            `ArcStr` implements `ToInputValue<__S>`
            `Box<T>` implements `ToInputValue<S>`
            `ID` implements `ToInputValue<__S>`
            `Nullable<T>` implements `ToInputValue<S>`
            `Object` implements `ToInputValue<__S>`
            `Value<S>` implements `ToInputValue<S>`
          and $N others
  = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)
